--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gpt4v-browsing",
+  "name": "webcrawlerbot",
   "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "screenshot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
